--- a/stylesheet.css
+++ b/stylesheet.css
@@ -3,6 +3,8 @@ body {
 	background-color: #0a0a0a;
 }
 
+img { vertical-align: initial; }
+
 [role="cover-background-image"] {
 	position: fixed;
 	width: 100%;
@@ -11,7 +13,7 @@ body {
 	background-repeat: no-repeat;
 	background-size: 100%;
 	background-attachment: fixed;
-    opacity: .8;
+    opacity: .7;
     z-index: 0;
 }
 
@@ -27,6 +29,8 @@ body {
 .bigtitle { font-size: 52px; margin-top: 30px; margin-bottom: 30px; }
 
 section { margin-top: 50px; margin-bottom: 50px; }
+
+.tooltip-inner { font-size: 18px; font-family: 'Calibri', serif; }
 
 /** Home **/
 #home {
@@ -69,10 +73,46 @@ section { margin-top: 50px; margin-bottom: 50px; }
 #call_for_paper .content { width: 600px; min-height: 500px; background-color: #d8d8d8; margin-left: auto; margin-right: auto; }
 
 #sponsor { position: relative; z-index: 100; width: 1000px; padding-top: 90px; margin-left: auto; margin-right: auto; }
-#sponsor h2 { color: #fff; }
-#sponsor .content { width: 600px; min-height: 500px; background-color: #d8d8d8; margin-left: auto; margin-right: auto; }
+#sponsor h2 { color: #fff; display: none; }
+#sponsor .content { width: 1000px; min-height: 500px; margin-left: auto; margin-right: auto; text-align: center; }
+#sponsor .decoration-top {
+	background-image: url(images/decoration.png);
+	background-repeat: no-repeat;
+	background-size: 100%;
+	width: 700px;
+	height: 172px;
+	margin-left: auto;
+	margin-right: auto;
+}
+#sponsor .decoration-btm {
+	background-image: url(images/decoration.png);
+	background-repeat: no-repeat;
+	background-size: 100%;
+	width: 700px;
+	height: 172px;
+	margin-left: auto;
+	margin-right: auto;
+	-moz-transform:rotate(3.14159rad);
+	-webkit-transform:rotate(3.14159rad);
+	-o-transform:rotate(3.14159rad);
+	-ms-transform:rotate(3.14159rad);
+	transform:rotate(3.14159rad);
+}
+#sponsor .content h3 { color: #fff; margin-bottom: 10px; }
+#sponsor .content .box { width: 170px; height: 100px; background-color: #d8d8d8; display: inline-block; margin-left: 30px; margin-right: 30px; }
+#sponsor .content .box img { max-height: 100%; }
 
 #staff { position: relative; z-index: 100; width: 1000px; padding-top: 90px; margin-left: auto; margin-right: auto; }
-#staff h2 { color: #fff; }
-#staff .content { width: 600px; min-height: 500px; background-color: #d8d8d8; margin-left: auto; margin-right: auto; }
+#staff h2 { color: #fff; text-align: center; }
+#staff .content { width: 650px; min-height: 500px; margin-left: auto; margin-right: auto; }
+#staff .content h3 { color: #fff; direction: ltr; writing-mode: vertical-lr; float: left; margin: 6px 20px; height: 72px; text-align-last: center; }
+#staff .content .row { margin-left: 65px; }
+#staff .content .avator { width: 80px; height: 80px; display: inline-block; background-color: rgba(196, 119, 119, 0.9); margin-top: 5px; margin-bottom: 5px; }
+#staff .content .avator img { width: 100%; }
+#staff .content .spacing { margin-bottom: 10px; }
+
+
+
+
+
 
