--- a/stylesheet.css
+++ b/stylesheet.css
@@ -25,12 +25,59 @@ img { vertical-align: initial; }
 .titlebox h2 { margin-top: 5px; margin-bottom: 5px; text-align: center; }
 .sfont { font-family: 'Fredericka the Great', cursive; }
 .blank { padding-top: 100px; }
+.hide { display: none; }
 
 .bigtitle { font-size: 52px; margin-top: 30px; margin-bottom: 30px; }
 
 section { margin-top: 50px; margin-bottom: 50px; }
 
 .tooltip-inner { font-size: 18px; font-family: 'Calibri', serif; }
+.link { cursor: pointer; }
+
+.white-popup {
+	position: relative;
+	background: #FFF;
+	padding: 25px;
+	width: 700px;
+	max-height: 700px;
+	margin: 0 auto;
+	border: 4px solid #808080;
+}
+.white-popup .avator { width: 150px; height: 150px; vertical-align: top; float: left; }
+.white-popup .avator img { width: 100%; border-radius: 50%; }
+.white-popup .data { margin-left: 200px; }
+.white-popup .data .title { font-size: 20px; }
+.white-popup .data [class^=data-] { font-size: 18px; margin-left: 50px; margin-bottom: 30px; }
+.white-popup .data .data-description { min-height: 60px; max-height: 400px; overflow: scroll; }
+/* ====== Zoom effect ====== */
+.mfp-zoom-in {
+  /* start state */
+  /* animate in */
+  /* animate out */
+}
+.mfp-zoom-in .mfp-with-anim {
+  opacity: 0;
+  transition: all 0.2s ease-in-out;
+  transform: scale(0.8);
+}
+.mfp-zoom-in.mfp-bg {
+  opacity: 0;
+  transition: all 0.3s ease-out;
+}
+.mfp-zoom-in.mfp-ready .mfp-with-anim {
+  opacity: 1;
+  transform: scale(1);
+}
+.mfp-zoom-in.mfp-ready.mfp-bg {
+  opacity: 0.8;
+}
+.mfp-zoom-in.mfp-removing .mfp-with-anim {
+  transform: scale(0.8);
+  opacity: 0;
+}
+.mfp-zoom-in.mfp-removing.mfp-bg {
+  opacity: 0;
+}
 
 /** Home **/
 #home {
