--- a/stylesheet.css
+++ b/stylesheet.css
@@ -9,7 +9,7 @@ img { vertical-align: initial; }
 	position: fixed;
 	width: 100%;
 	height: 100%;
-	background-image: url(images/background.jpg);
+	background-image: url(images/background.png);
 	background-repeat: no-repeat;
 	background-size: 100%;
 	background-attachment: fixed;
