--- a/stylesheet.css
+++ b/stylesheet.css
@@ -161,6 +161,41 @@ section { margin-top: 50px; margin-bottom: 50px; }
 
 
 
+/* Desktop */
+@media screen and (min-width: 1280px) {
+	
+}
 
+/* Message */
+@media screen and (min-height: 600px) {
+
+}
+
+/* */
+@media screen and (max-width: 850px) {
+
+}
+
+/* Tablet */
+@media screen and (max-width: 800px) {
+
+}
+
+/* */
+@media screen and (max-width: 700px) {
+
+}
+
+/* Mobile */
+@media screen and (max-width: 460px) {
+
+}
+@media screen and (max-width: 380px) {
+
+}
+
+@media screen and (max-width: 320px) {
+
+}
 
 
