--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,7 +1,4 @@
-body {
-	color: #000;
-	background-color: #0a0a0a;
-}
+body { color: #000; background-color: #0a0a0a; margin: 0; }
 
 img { vertical-align: initial; }
 
@@ -18,21 +15,16 @@ img { vertical-align: initial; }
 }
 
 .btn.gray { color: #555; }
-
 .text-large { font-size: 1.5em; }
-
 .titlebox { background-color: #d8d8d8; display: table; margin: 0 auto; padding: 10px 20px; }
 .titlebox h2 { margin-top: 5px; margin-bottom: 5px; text-align: center; }
 .sfont { font-family: 'Fredericka the Great', cursive; }
 .blank { padding-top: 100px; }
 .hide { display: none; }
-
 .bigtitle { font-size: 52px; margin-top: 30px; margin-bottom: 30px; }
-
-section { margin-top: 50px; margin-bottom: 50px; }
-
 .tooltip-inner { font-size: 18px; font-family: 'Calibri', serif; }
 .link { cursor: pointer; }
+section { margin-top: 50px; margin-bottom: 50px; }
 
 .white-popup {
 	position: relative;
@@ -50,34 +42,13 @@ section { margin-top: 50px; margin-bottom: 50px; }
 .white-popup .data [class^=data-] { font-size: 18px; margin-left: 50px; margin-bottom: 30px; }
 .white-popup .data .data-description { min-height: 60px; max-height: 400px; overflow: scroll; }
 /* ====== Zoom effect ====== */
-.mfp-zoom-in {
-  /* start state */
-  /* animate in */
-  /* animate out */
-}
-.mfp-zoom-in .mfp-with-anim {
-  opacity: 0;
-  transition: all 0.2s ease-in-out;
-  transform: scale(0.8);
-}
-.mfp-zoom-in.mfp-bg {
-  opacity: 0;
-  transition: all 0.3s ease-out;
-}
-.mfp-zoom-in.mfp-ready .mfp-with-anim {
-  opacity: 1;
-  transform: scale(1);
-}
-.mfp-zoom-in.mfp-ready.mfp-bg {
-  opacity: 0.8;
-}
-.mfp-zoom-in.mfp-removing .mfp-with-anim {
-  transform: scale(0.8);
-  opacity: 0;
-}
-.mfp-zoom-in.mfp-removing.mfp-bg {
-  opacity: 0;
-}
+.mfp-zoom-in { /* start state */ /* animate in */ /* animate out */ }
+.mfp-zoom-in .mfp-with-anim { opacity: 0; transition: all 0.2s ease-in-out; transform: scale(0.8); }
+.mfp-zoom-in.mfp-bg { opacity: 0; transition: all 0.3s ease-out; }
+.mfp-zoom-in.mfp-ready .mfp-with-anim { opacity: 1; transform: scale(1); }
+.mfp-zoom-in.mfp-ready.mfp-bg { opacity: 0.8; }
+.mfp-zoom-in.mfp-removing .mfp-with-anim { transform: scale(0.8); opacity: 0; }
+.mfp-zoom-in.mfp-removing.mfp-bg { opacity: 0; }
 
 /** Home **/
 #home {
@@ -87,18 +58,16 @@ section { margin-top: 50px; margin-bottom: 50px; }
 	width: 500px;
 	height: 700px;
 	margin: 0 auto;
-	color: #fff;
-	font-size: 65px;
-	padding-top: 480px;
-	font-family: 'Lora', serif;
-	font-weight: bold;
 }
+#home h2 { position: absolute; font-size: 62px; color: #fff; bottom: 85px; }
 
 .navbar { background-color: rgba(255,255,255,0.8); z-index: 1000; width: 100%; position: fixed; }
 
-.navbar ul.nav { display: table; margin: 0 auto; padding-top: 10pt; padding-bottom: 10pt; }
+.navbar ul.nav { display: table; margin: 0 auto; padding-top: 20pt; padding-bottom: 20pt; }
 
-.navbar ul.nav li { padding-left: 8pt; padding-right: 8pt; }
+.navbar ul.nav li { padding-left: 8pt; padding-right: 8pt; display: inline-block; }
+
+.navbar ul.nav li a { text-decoration: none; }
 
 #program { position: relative; z-index: 100; width: 1000px; padding-top: 90px; margin-left: auto; margin-right: auto; }
 #program h2 { color: #fff; text-align: center; }
@@ -114,14 +83,14 @@ section { margin-top: 50px; margin-bottom: 50px; }
 #program .timetable .data .speaker { line-height: 40px; }
 
 #transport { position: relative; z-index: 100; width: 1000px; padding-top: 90px; margin-left: auto; margin-right: auto; }
-#transport h2 { color: #fff; }
+#transport h2 { color: #fff; text-align: center; }
 
 #call_for_paper { position: relative; z-index: 100; width: 1000px; padding-top: 90px; margin-left: auto; margin-right: auto; }
-#call_for_paper h2 { color: #fff; }
+#call_for_paper h2 { color: #fff; text-align: center; }
 #call_for_paper .content { width: 600px; min-height: 500px; background-color: #d8d8d8; margin-left: auto; margin-right: auto; }
 
 #sponsor { position: relative; z-index: 100; width: 1000px; padding-top: 90px; margin-left: auto; margin-right: auto; }
-#sponsor h2 { color: #fff; display: none; }
+#sponsor h2 { color: #fff; text-align: center; display: none; }
 #sponsor .content { width: 1000px; min-height: 500px; margin-left: auto; margin-right: auto; text-align: center; }
 #sponsor .decoration-top {
 	background-image: url(images/decoration.png);
@@ -147,6 +116,7 @@ section { margin-top: 50px; margin-bottom: 50px; }
 	transform:rotate(3.14159rad);
 }
 #sponsor .content h3 { color: #fff; margin-bottom: 10px; }
+#sponsor .content .row { margin-bottom: 20px; }
 #sponsor .content .box { width: 170px; height: 100px; background-color: #d8d8d8; display: inline-block; margin-left: 30px; margin-right: 30px; }
 #sponsor .content .box img { max-height: 100%; }
 
@@ -163,7 +133,7 @@ section { margin-top: 50px; margin-bottom: 50px; }
 
 /* Desktop */
 @media screen and (min-width: 1280px) {
-	
+
 }
 
 /* Message */
