--- a/stylesheet.css
+++ b/stylesheet.css
@@ -19,19 +19,21 @@ img { vertical-align: initial; }
 .titlebox { background-color: #d8d8d8; display: table; margin: 0 auto; padding: 10px 20px; }
 .titlebox h2 { margin-top: 5px; margin-bottom: 5px; text-align: center; }
 .sfont { font-family: 'Fredericka the Great', cursive; }
-.blank { padding-top: 100px; }
+.blank { padding-top: 60pt; }
 .hide { display: none; }
 .bigtitle { font-size: 52px; margin-top: 30px; margin-bottom: 30px; }
 .tooltip-inner { font-size: 18px; font-family: 'Calibri', serif; }
 .link { cursor: pointer; }
+.fix { clear: both; }
 section { margin-top: 50px; margin-bottom: 50px; }
 
 .white-popup {
 	position: relative;
 	background: #FFF;
-	padding: 25px;
+	padding: 25pt;
 	width: 700px;
-	max-height: 700px;
+	max-width: 80%;
+	max-height: 600px;
 	margin: 0 auto;
 	border: 4px solid #808080;
 }
@@ -50,48 +52,89 @@ section { margin-top: 50px; margin-bottom: 50px; }
 .mfp-zoom-in.mfp-removing .mfp-with-anim { transform: scale(0.8); opacity: 0; }
 .mfp-zoom-in.mfp-removing.mfp-bg { opacity: 0; }
 
+.main-title { display: none; position: relative; z-index: 500; text-align: center; margin-top: 10pt; margin-bottom: 10pt; padding-top: 0; padding-bottom: 0; }
+.main-title a { text-decoration: none; color: #000; }
+
 /** Home **/
 #home {
 	position: relative;
 	z-index: 100;
-	background: url(images/big-logo.png) no-repeat 100%;
+	background: url(images/big-logo.png);
+	background-repeat: no-repeat;
+	background-size: auto 100%;
 	width: 500px;
 	height: 700px;
 	margin: 0 auto;
 }
 #home h2 { position: absolute; font-size: 62px; color: #fff; bottom: 85px; }
 
-.navbar { background-color: rgba(255,255,255,0.8); z-index: 1000; width: 100%; position: fixed; }
+.navbar { background-color: rgba(255,255,255,0.8); z-index: 1000; width: 100%; min-height: 65px; position: fixed; top: 0; }
+.navbar [role="bugar-button"] { list-style: none; display: none; }
+nav[role="bugar-button"] {
+    display: block;
+    position: absolute;
+    right: 0;
+    top: 16px;
+    -webkit-transform: translateY(-50%);
+    -ms-transform: translateY(-50%);
+    transform: translateY(-50%);
+    font-size: 20pt;
+    width: 1em;
+    height: 1.2em;
+    line-height: 2em;
+    margin: .5em;
+    cursor: pointer;
+    vertical-align: sub;
+}
+nav[role="bugar-button"]>li {
+    position: absolute;
+    display: block;
+    width: 100%;
+    border: 1px solid #000;
+    -webkit-border-radius: 2px;
+    border-radius: 2px;
+    -webkit-transition: top 500ms cubic-bezier(0.17, 0.84, 0.44, 1),-webkit-transform 500ms cubic-bezier(0.17, 0.84, 0.44, 1);
+    transition: top 500ms cubic-bezier(0.17, 0.84, 0.44, 1),-webkit-transform 500ms cubic-bezier(0.17, 0.84, 0.44, 1);
+    transition: transform 500ms cubic-bezier(0.17, 0.84, 0.44, 1),top 500ms cubic-bezier(0.17, 0.84, 0.44, 1);
+    transition: transform 500ms cubic-bezier(0.17, 0.84, 0.44, 1),top 500ms cubic-bezier(0.17, 0.84, 0.44, 1),-webkit-transform 500ms cubic-bezier(0.17, 0.84, 0.44, 1);
+    -webkit-transform-origin: center center;
+    -ms-transform-origin: center center;
+    transform-origin: center center;
+}
+nav[role="bugar-button"]>li[role="bugar-top-bread"] { top: 30%; }
+nav[role="bugar-button"]>li[role="bugar-ham"] { top: 50%; }
+nav[role="bugar-button"]>li[role="bugar-btn-bread"] { top: 70%; }
 
-.navbar ul.nav { display: table; margin: 0 auto; padding-top: 20pt; padding-bottom: 20pt; }
 
-.navbar ul.nav li { padding-left: 8pt; padding-right: 8pt; display: inline-block; }
+.navbar .nav ul { display: table; margin: 0 auto; padding: 15pt 0; }
+.navbar .nav ul li { padding-left: 15pt; padding-right: 15pt; display: inline-block; }
+.navbar .nav ul li a { text-decoration: none; }
 
-.navbar ul.nav li a { text-decoration: none; }
-
-#program { position: relative; z-index: 100; width: 1000px; padding-top: 90px; margin-left: auto; margin-right: auto; }
+#program { position: relative; z-index: 100; width: 800px; max-width: 100%; padding-top: 90px; margin-left: auto; margin-right: auto; }
 #program h2 { color: #fff; text-align: center; }
-#program .timetable { margin-top: 10px; margin-bottom: 10px; }
+#program .timetable { margin-top: 10pt; margin-bottom: 10pt; }
 #program .timetable table { width: 100%; border-collapse: separate; border-spacing: 5px; }
 #program .timetable th { color: #fff; font-size: 24px; text-align: center; }
 #program .timetable td { background-color: #d8d8d8; width: 250px; text-align: center; font-size: 20px; padding: 2em 0; font-family: 'Fredericka the Great', cursive; }
 #program .timetable [role="time-col"] { width: 150px; background-color: transparent; color: #fff; }
-#program .timetable .avatar { width: 80px; height: 80px; display: inline-block; margin-right: 10px; border-radius: 50%; vertical-align: middle; overflow: hidden; }
+#program .timetable .avatar { width: 80px; height: 80px; display: inline-block; margin-right: 10pt; border-radius: 50%; vertical-align: middle; overflow: hidden; }
 #program .timetable .avatar img { width: 100%; height: 100%; }
 #program .timetable .data { height: 80px; display: inline-block; vertical-align: middle; }
 #program .timetable .data .title { line-height: 40px; }
 #program .timetable .data .speaker { line-height: 40px; }
 
-#transport { position: relative; z-index: 100; width: 1000px; padding-top: 90px; margin-left: auto; margin-right: auto; }
+#transport { position: relative; z-index: 100; width: 800px; max-width: 100%; padding-top: 90px; margin-left: auto; margin-right: auto; }
 #transport h2 { color: #fff; text-align: center; }
+#transport .map { margin-left: 15pt; margin-right: 15pt; }
+#transport iframe { max-width: 100%; }
 
-#call_for_paper { position: relative; z-index: 100; width: 1000px; padding-top: 90px; margin-left: auto; margin-right: auto; }
+#call_for_paper { position: relative; z-index: 100; width: 800px; max-width: 100%; padding-top: 90px; margin-left: auto; margin-right: auto; }
 #call_for_paper h2 { color: #fff; text-align: center; }
 #call_for_paper .content { width: 600px; min-height: 500px; background-color: #d8d8d8; margin-left: auto; margin-right: auto; }
 
-#sponsor { position: relative; z-index: 100; width: 1000px; padding-top: 90px; margin-left: auto; margin-right: auto; }
+#sponsor { position: relative; z-index: 100; width: 800px; max-width: 100%; padding-top: 90px; margin-left: auto; margin-right: auto; }
 #sponsor h2 { color: #fff; text-align: center; display: none; }
-#sponsor .content { width: 1000px; min-height: 500px; margin-left: auto; margin-right: auto; text-align: center; }
+#sponsor .content { width: 800px; max-width: 100%; min-height: 500px; margin-left: auto; margin-right: auto; text-align: center; }
 #sponsor .decoration-top {
 	background-image: url(images/decoration.png);
 	background-repeat: no-repeat;
@@ -120,7 +163,7 @@ section { margin-top: 50px; margin-bottom: 50px; }
 #sponsor .content .box { width: 170px; height: 100px; background-color: #d8d8d8; display: inline-block; margin-left: 30px; margin-right: 30px; }
 #sponsor .content .box img { max-height: 100%; }
 
-#staff { position: relative; z-index: 100; width: 1000px; padding-top: 90px; margin-left: auto; margin-right: auto; }
+#staff { position: relative; z-index: 100; width: 800px; max-width: 100%; padding-top: 90px; margin-left: auto; margin-right: auto; }
 #staff h2 { color: #fff; text-align: center; }
 #staff .content { width: 650px; min-height: 500px; margin-left: auto; margin-right: auto; }
 #staff .content h3 { color: #fff; direction: ltr; writing-mode: vertical-lr; float: left; margin: 6px 20px; height: 72px; text-align-last: center; }
@@ -129,26 +172,42 @@ section { margin-top: 50px; margin-bottom: 50px; }
 #staff .content .avator img { width: 100%; }
 #staff .content .spacing { margin-bottom: 10px; }
 
-
+/* Mobile */
+#program .timetable-mobile { display: none; width: 550px; max-width: 100%; margin: 10pt 0; }
+#program .timetable-mobile table { width: 100%; border-collapse: separate; border-spacing: 5px; }
+#program .timetable-mobile th { color: #fff; font-size: 24px; text-align: center; }
+#program .timetable-mobile td { position: relative; background: transparent; width: 100%; text-align: center; font-size: 20px; padding: 10pt 0; font-family: 'Fredericka the Great', cursive; color: #fff; }
+#program .timetable-mobile [role="time-col"] { width: 150px; background-color: #d8d8d8; color: #333; }
+#program .timetable-mobile .place { position: absolute; top: 5pt; right: 20pt; background-color: #fff; border-radius: 50%; color: #333; padding: 5pt; }
+#program .timetable-mobile .avatar { width: 80px; height: 80px; display: inline-block; margin-right: 10pt; border-radius: 50%; vertical-align: middle; overflow: hidden; }
+#program .timetable-mobile .avatar img { width: 100%; height: 100%; }
+#program .timetable-mobile .data { height: 80px; display: inline-block; vertical-align: middle; }
+#program .timetable-mobile .data .title { line-height: 40px; }
+#program .timetable-mobile .data .speaker { line-height: 40px; }
 
 /* Desktop */
 @media screen and (min-width: 1280px) {
 
 }
 
-/* Message */
-@media screen and (min-height: 600px) {
-
-}
-
-/* */
-@media screen and (max-width: 850px) {
-
-}
-
 /* Tablet */
 @media screen and (max-width: 800px) {
+	.main-title { display: block; }
 
+	.navbar .nav { display: none; }
+	.navbar [role="bugar-button"] { display: block; }
+
+	#home { width: 400px; height: 550px; }
+	#home h2 { font-size: 50px; bottom: 65px; }
+
+	#program { padding-top: 50px; }
+	#program .timetable { display: none; }
+	#program .timetable-mobile { display: block; }
+
+	#transport { display: none; }
+	#call_for_paper { display: none; }
+	#sponsor { display: none; }
+	#staff { display: none; }
 }
 
 /* */
