--- a/stylesheet.css
+++ b/stylesheet.css
@@ -173,7 +173,7 @@ nav[role="bugar-button"]>li[role="bugar-btn-bread"] { top: 70%; }
 #staff .content .spacing { margin-bottom: 10px; }
 
 /* Mobile */
-#program .timetable-mobile { display: none; width: 550px; max-width: 100%; margin: 10pt 0; }
+#program .timetable-mobile { display: none; width: 550px; max-width: 100%; margin: 10pt auto; }
 #program .timetable-mobile table { width: 100%; border-collapse: separate; border-spacing: 5px; }
 #program .timetable-mobile th { color: #fff; font-size: 24px; text-align: center; }
 #program .timetable-mobile td { position: relative; background: transparent; width: 100%; text-align: center; font-size: 20px; padding: 10pt 0; font-family: 'Fredericka the Great', cursive; color: #fff; }
