--- a/stylesheet.css
+++ b/stylesheet.css
@@ -62,6 +62,7 @@ section { margin-top: 50px; margin-bottom: 50px; }
 	background: url(images/big-logo.png);
 	background-repeat: no-repeat;
 	background-size: auto 100%;
+	background-position: center;
 	width: 500px;
 	height: 700px;
 	margin: 0 auto;
@@ -69,7 +70,7 @@ section { margin-top: 50px; margin-bottom: 50px; }
 #home h2 { position: absolute; font-size: 62px; color: #fff; bottom: 85px; }
 
 .navbar { background-color: rgba(255,255,255,0.8); z-index: 1000; width: 100%; min-height: 65px; position: fixed; top: 0; }
-.navbar [role="bugar-button"] { list-style: none; display: none; }
+.navbar [role="bugar-button"] { list-style: none; display: none; z-index: 1000; }
 nav[role="bugar-button"] {
     display: block;
     position: absolute;
@@ -105,7 +106,23 @@ nav[role="bugar-button"]>li[role="bugar-top-bread"] { top: 30%; }
 nav[role="bugar-button"]>li[role="bugar-ham"] { top: 50%; }
 nav[role="bugar-button"]>li[role="bugar-btn-bread"] { top: 70%; }
 
-
+nav[role="bugar-button"].active>li[role="bugar-top-bread"] {
+	top: 50%;
+    -webkit-transform: rotateZ(-45deg);
+    -ms-transform: rotate(-45deg);
+    transform: rotateZ(-45deg);
+}
+nav[role="bugar-button"].active>li[role="bugar-ham"] {
+	-webkit-transform: rotateZ(45deg);
+    -ms-transform: rotate(45deg);
+    transform: rotateZ(45deg);
+}
+nav[role="bugar-button"].active>li[role="bugar-btn-bread"] {
+	top: 50%;
+    -webkit-transform: rotateZ(-45deg);
+    -ms-transform: rotate(-45deg);
+    transform: rotateZ(-45deg);
+}
 .navbar .nav ul { display: table; margin: 0 auto; padding: 15pt 0; }
 .navbar .nav ul li { padding-left: 15pt; padding-right: 15pt; display: inline-block; }
 .navbar .nav ul li a { text-decoration: none; }
@@ -178,12 +195,18 @@ nav[role="bugar-button"]>li[role="bugar-btn-bread"] { top: 70%; }
 #program .timetable-mobile th { color: #fff; font-size: 24px; text-align: center; }
 #program .timetable-mobile td { position: relative; background: transparent; width: 100%; text-align: center; font-size: 20px; padding: 10pt 0; font-family: 'Fredericka the Great', cursive; color: #fff; }
 #program .timetable-mobile [role="time-col"] { width: 150px; background-color: #d8d8d8; color: #333; }
-#program .timetable-mobile .place { position: absolute; top: 5pt; right: 20pt; background-color: #fff; border-radius: 50%; color: #333; padding: 5pt; }
+#program .timetable-mobile .place { background-color: #fff; border-radius: 50%; color: #333; padding: 5pt; display: table; margin-left: auto; margin-right: auto; }
 #program .timetable-mobile .avatar { width: 80px; height: 80px; display: inline-block; margin-right: 10pt; border-radius: 50%; vertical-align: middle; overflow: hidden; }
 #program .timetable-mobile .avatar img { width: 100%; height: 100%; }
 #program .timetable-mobile .data { height: 80px; display: inline-block; vertical-align: middle; }
 #program .timetable-mobile .data .title { line-height: 40px; }
 #program .timetable-mobile .data .speaker { line-height: 40px; }
+
+footer { position: relative; z-index: 100; border-top: 2px solid #fff; background-color: rgba(255,255,255,0.8); padding: 1em 0; }
+footer section { margin: auto; }
+footer .icons { text-align: center; padding-bottom: 20px; }
+footer .icons img { margin-left: 10px; margin-right: 10px; }
+footer .copyright { position: relative; z-index: 100; color: #000; text-align: center; }
 
 /* Desktop */
 @media screen and (min-width: 1280px) {
@@ -192,22 +215,42 @@ nav[role="bugar-button"]>li[role="bugar-btn-bread"] { top: 70%; }
 
 /* Tablet */
 @media screen and (max-width: 800px) {
+	section { margin-top: 20px; margin-bottom: 20px; }
+
 	.main-title { display: block; }
 
-	.navbar .nav { display: none; }
+	.navbar .nav { display: none; border-top: 2px solid #333; }
 	.navbar [role="bugar-button"] { display: block; }
+	.navbar .nav ul li { display: block; }
+	.navbar .nav ul li a { line-height: 2em; }
 
-	#home { width: 400px; height: 550px; }
-	#home h2 { font-size: 50px; bottom: 65px; }
+	#home { max-width: 100%; height: 550px; }
+	#home h2 { font-size: 50px; bottom: 65px; left: 0; right: 0; text-align: center; }
 
 	#program { padding-top: 50px; }
 	#program .timetable { display: none; }
 	#program .timetable-mobile { display: block; }
 
-	#transport { display: none; }
-	#call_for_paper { display: none; }
-	#sponsor { display: none; }
-	#staff { display: none; }
+	.white-popup .data { margin-left: 0; }
+	.white-popup .avator { float: initial; margin-left: auto; margin-right: auto; }
+	.white-popup .data .data-description { max-height: 200px; }
+
+	#transport { padding-top: 50px; }
+	#transport iframe { height: 300px }
+
+	#call_for_paper { padding-top: 50px; }
+	#call_for_paper .content { max-width: 90%; }
+
+	#sponsor { padding-top: 50px; }
+	#sponsor .decoration-top { max-width: 90%; height: 180px; }
+	#sponsor .decoration-btm { max-width: 90%; height: 180px; }
+	#sponsor .content .box { margin-top: 10px; margin-bottom: 10px; }
+
+	#staff { padding-top: 50px; }
+	#staff .content { max-width: 90%; }
+
+	footer { padding: 0.5em 0; }
+	footer .icons { padding-bottom: 10px; }
 }
 
 /* */
@@ -216,9 +259,17 @@ nav[role="bugar-button"]>li[role="bugar-btn-bread"] { top: 70%; }
 }
 
 /* Mobile */
-@media screen and (max-width: 460px) {
+@media screen and (max-width: 440px) {
+	#home { height: 450px; }
+	#home h2 { font-size: 40px; bottom: 55px; }
 
+	.white-popup .data .data-description { max-height: 300px; }
+	.mfp-inline-holder .mfp-content, .mfp-ajax-holder .mfp-content { max-width: 80%; }
+
+	#sponsor .decoration-top { max-width: 90%; height: 90px; }
+	#sponsor .decoration-btm { max-width: 90%; height: 90px; }
 }
+
 @media screen and (max-width: 380px) {
 
 }
