--- a/stylesheet.css
+++ b/stylesheet.css
@@ -69,7 +69,7 @@ section { margin-top: 50px; margin-bottom: 50px; }
 }
 #home h2 { position: absolute; font-size: 62px; color: #fff; bottom: 85px; }
 
-.navbar { background-color: rgba(255,255,255,0.8); z-index: 1000; width: 100%; min-height: 65px; position: fixed; top: 0; }
+.navbar { background-color: rgba(255,255,255,0.8); z-index: 1000; width: 100%; min-height: 65px; position: fixed; top: 0; margin-top: 0; margin-bottom: 0; }
 .navbar [role="bugar-button"] { list-style: none; display: none; z-index: 1000; }
 nav[role="bugar-button"] {
     display: block;
