--- a/stylesheet.css
+++ b/stylesheet.css
@@ -207,7 +207,7 @@ nav[role="bugar-button"].active>li[role="bugar-btn-bread"] {
 #staff .content h3 { color: #fff; direction: ltr; writing-mode: vertical-lr; float: left; margin: 6px 20px; width: 20px; height: 72px; word-wrap: break-word; text-align-last: center; }
 #staff .content .row { margin-left: 65px; }
 #staff .content .avator { width: 80px; height: 80px; display: inline-block; background-color: rgba(196, 119, 119, 0.9); margin-top: 5px; margin-bottom: 5px; }
-#staff .content .avator img { width: 100%; }
+#staff .content .avator img { width: 100%; max-height: 100%; }
 #staff .content .spacing { margin-bottom: 10px; }
 
 /* Mobile */
