--- a/stylesheet.css
+++ b/stylesheet.css
@@ -148,13 +148,14 @@ nav[role="bugar-button"].active>li[role="bugar-btn-bread"] {
 .navbar .nav ul li { padding-left: 15pt; padding-right: 15pt; display: inline-block; }
 .navbar .nav ul li a { text-decoration: none; }
 
-#program { position: relative; z-index: 100; width: 800px; max-width: 100%; padding-top: 90px; margin-left: auto; margin-right: auto; }
+#program { position: relative; z-index: 100; width: 1000px; max-width: 100%; padding-top: 90px; margin-left: auto; margin-right: auto; }
 #program h2 { color: #fff; text-align: center; }
 #program .timetable { margin-top: 10pt; margin-bottom: 10pt; }
 #program .timetable table { width: 100%; border-collapse: separate; border-spacing: 5px; }
 #program .timetable th { color: #fff; font-size: 24px; text-align: center; }
-#program .timetable td { background-color: #d8d8d8; width: 250px; text-align: center; font-size: 20px; padding: 2em 0; font-family: 'Fredericka the Great', cursive; }
-#program .timetable [role="time-col"] { width: 150px; background-color: transparent; color: #fff; }
+#program .timetable td { background-color: #d8d8d8; width: 250px; text-align: center; font-size: 18px; padding: 2em 0; font-family: 'Fredericka the Great', cursive; }
+#program .timetable td > table td { padding: 5px 0; }
+#program .timetable [role="time-col"] { width: 200px; background-color: transparent; color: #fff; }
 #program .timetable .avatar { width: 80px; height: 80px; display: inline-block; margin-right: 10pt; border-radius: 50%; vertical-align: middle; overflow: hidden; }
 #program .timetable .avatar img { width: 100%; height: 100%; }
 #program .timetable .data { height: 80px; display: inline-block; vertical-align: middle; }
@@ -168,7 +169,11 @@ nav[role="bugar-button"].active>li[role="bugar-btn-bread"] {
 
 #call_for_paper { position: relative; z-index: 100; width: 800px; max-width: 100%; padding-top: 90px; margin-left: auto; margin-right: auto; }
 #call_for_paper h2 { color: #fff; text-align: center; }
-#call_for_paper .content { width: 600px; min-height: 500px; background-color: #d8d8d8; margin-left: auto; margin-right: auto; }
+#call_for_paper .content { width: 100%; min-height: 500px; background-color: #d8d8d8; margin-left: auto; margin-right: auto; padding: 10px 20px; }
+#call_for_paper h3 { font-size: 20px; }
+#call_for_paper .content ol > li { margin-top: 15px; margin-bottom: 15px; }
+#call_for_paper .content ol > li > ul > li { margin-top: 15px; margin-bottom: 15px; }
+#call_for_paper .content ol > li > ul > li li { margin-top: 5px; margin-bottom: 5px; }
 
 #sponsor { position: relative; z-index: 100; width: 800px; max-width: 100%; padding-top: 90px; margin-left: auto; margin-right: auto; }
 #sponsor h2 { color: #fff; text-align: center; display: none; }
