--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,4 +1,4 @@
-body { color: #000; background-color: #0a0a0a; margin: 0; }
+body { color: #000; background-color: #0a0a0a; margin: 0; line-height: 20px; font-family: 'Noto Sans', sans-serif; }
 
 img { vertical-align: initial; }
 
