--- a/stylesheet.css
+++ b/stylesheet.css
@@ -2,7 +2,7 @@ body { color: #000; background-color: #0a0a0a; margin: 0; font-family: 'Noto San
 
 img { vertical-align: initial; }
 
-p { line-height: 20px; }
+p { line-height: 20px; word-break: break-word; }
 
 [role="cover-background-image"] {
 	position: fixed;
@@ -312,6 +312,8 @@ footer .copyright { position: relative; z-index: 100; color: #000; text-align: c
 
 /* Mobile */
 @media screen and (max-width: 440px) {
+	ol, ul { padding-left: 10px; }
+
 	.logo { width: 300px; }
 	.logo-title-top { width: 320px; height: 80px; }
 	.logo-title-btm { width: 320px; height: 80px; }
